2.0.7-pl
==============
 - Added new field type: ENUM

2.0.6-pl
==============
 - Added new field type Listbox (int values) (@gvozdb) [#19]

2.0.5-pl
==============
 - Fixed errors

2.0.4-pl
==============
 - Added the ability to create indexes

2.0.3-pl
==============
 - fixed field values
 - fixed custom tab
 - fixed abs update
 - fixed abs grid
 - fixed docs link

2.0.2-pl
==============
 - fixed issues #7
 - fixed issues #14
 - PR #9 (halftrainedharry)
 - PR #10 (halftrainedharry)
 - PR #12 (halftrainedharry)

2.0.1-pl
==============
 - fixed issues #4
 - fixed issues #5
 - fixed issues #6

2.0.0-pl
==============
 - Updated core
 - Updated interface

1.1.0-pl
==============
 - Refactored to use PSR-4 autoload

1.0.0-pl
==============
- First release