@@ -1,6 +1,7 @@
 2.0.7-pl
 ==============
  - Added new field type: ENUM
+ - Added new field type: SET
 
 2.0.6-pl
 ==============
